cache/week1/QA-002/p0-verification/include/tty_write_hooks.h

struct tty;
// ============================================================================
// Hook Management Functions
// ============================================================================

// Initialize the hook system
void tty_hooks_init(void);
// Install hooks to redirect output through backend
// Returns 0 on success, -1 on error
int tty_hooks_install(struct ui_backend* backend);
// Uninstall hooks and restore original behavior
// Returns 0 on success, -1 on error
int tty_hooks_uninstall(void);
// ============================================================================
// Statistics and Debugging
// ============================================================================

typedef struct {
    uint64_t call_count[22];    // Per-function call counts
    uint64_t total_calls;        // Total calls to all functions
    uint64_t intercepted_calls;  // Calls routed through backend
    uint64_t fallback_calls;     // Calls to original functions
} tty_hook_stats_t;
// Get current hook statistics
void tty_hooks_get_stats(tty_hook_stats_t* stats);
// Reset hook statistics
void tty_hooks_reset_stats(void);
// Get function name by index (0-21)
const char* tty_hooks_get_function_name(int index);
// Get total number of hooked functions
int tty_hooks_get_count(void);