第一次-失败的尝试/第三周-施工方案/工作区/week3-executor/INTG-001/ffi/c_types.zig


pub extern "c" fn ui_backend_process_command(
    backend: *UiBackend,
    cmd_fn: TtyCmdFn,
    ctx: *const TtyCtx
) void;

pub extern "c" fn ui_backend_flush_frame(backend: *UiBackend) void;

pub extern "c" fn ui_backend_get_capabilities(
    backend: *const UiBackend
) *const UiCapabilities;

pub extern "c" fn ui_backend_set_frame_rate(
    backend: *UiBackend,
    target_fps: u32
) void;

pub extern "c" fn ui_backend_error_string(err: UiBackendError) [*:0]const u8;

// Frame aggregator functions
pub extern "c" fn frame_aggregator_create(target_fps: u32) ?*FrameAggregator;
pub extern "c" fn frame_aggregator_destroy(agg: *FrameAggregator) void;
pub extern "c" fn frame_aggregator_add_update(
    agg: *FrameAggregator,
    ctx: *const TtyCtx
) void;
pub extern "c" fn frame_aggregator_should_emit(agg: *const FrameAggregator) bool;
pub extern "c" fn frame_aggregator_emit(agg: *FrameAggregator) ?*UiFrame;
pub extern "c" fn frame_aggregator_reset(agg: *FrameAggregator) void;

// Hook functions
pub extern "c" fn tty_hooks_init() void;
pub extern "c" fn tty_hooks_install(backend: *UiBackend) c_int;
pub extern "c" fn tty_hooks_uninstall() c_int;
pub extern "c" fn tty_hooks_get_stats(stats: *TtyHookStats) void;
pub extern "c" fn tty_hooks_reset_stats() void;
pub extern "c" fn tty_hooks_get_function_name(index: c_int) [*:0]const u8;
pub extern "c" fn tty_hooks_get_count() c_int;

// Router functions
pub extern "c" fn backend_router_create(initial_mode: BackendMode) ?*BackendRouter;
pub extern "c" fn backend_router_destroy(router: *BackendRouter) void;
pub extern "c" fn backend_router_set_mode(
    router: *BackendRouter,
    mode: BackendMode
) void;
pub extern "c" fn backend_router_register_ui(
    router: *BackendRouter,
    backend: *UiBackend
) c_int;
pub extern "c" fn backend_router_unregister_ui(router: *BackendRouter) void;
pub extern "c" fn backend_route_command(
    router: *BackendRouter,
    tty: *Tty,
    cmd_fn: TtyCmdFn,
    ctx: *const TtyCtx
) void;
pub extern "c" fn backend_should_route_to_ui(
    router: *const BackendRouter,
    cmd_fn: TtyCmdFn
) bool;
pub extern "c" fn backend_get_command_name(
    router: *const BackendRouter,
    cmd_fn: TtyCmdFn
) [*:0]const u8;
pub extern "c" fn backend_router_set_metrics(
    router: *BackendRouter,
    enable: bool
) void;
pub extern "c" fn backend_router_get_stats(
    router: *const BackendRouter
) *const BackendRouterStats;
pub extern "c" fn backend_router_reset_stats(router: *BackendRouter) void;
pub extern "c" fn backend_router_init_default_mappings(router: *BackendRouter) void;
pub extern "c" fn backend_router_add_mapping(
    router: *BackendRouter,
    name: [*:0]const u8,
    tty_fn: TtyCmdFn,
    ui_fn: UiCmdFn,
    flags: u32
) void;
pub extern "c" fn backend_router_remove_mapping(
    router: *BackendRouter,
    tty_fn: TtyCmdFn
) void;
pub extern "c" fn backend_router_init_global(mode: BackendMode) c_int;
pub extern "c" fn backend_router_cleanup_global() void;
pub extern "c" fn backend_router_configure_hybrid(
    router: *BackendRouter,
    config: *const HybridModeConfig
) void;
pub extern "c" fn backend_router_start_recording(
    router: *BackendRouter,
    max_commands: u32
) void;
pub extern "c" fn backend_router_stop_recording(
    router: *BackendRouter,
    count: *u32
) ?[*]RecordedCommand;
pub extern "c" fn backend_router_replay_commands(
    router: *BackendRouter,
    commands: [*]const RecordedCommand,
    count: u32
) void;
pub extern "c" fn backend_router_get_last_error(
    router: *const BackendRouter
) RouterError;
pub extern "c" fn backend_router_error_string(err: RouterError) [*:0]const u8;

// Global router instance
pub extern var global_backend_router: ?*BackendRouter;

// ============================================================================
// Helper Functions for Safe FFI
// ============================================================================

pub fn createBackend(backend_type: UiBackendType, caps: ?*const UiCapabilities) !*UiBackend {
    const backend = ui_backend_create(backend_type, caps) orelse {
        return error.BackendCreationFailed;
    };
    return backend;
}

pub fn createRouter(mode: BackendMode) !*BackendRouter {
    const router = backend_router_create(mode) orelse {
        return error.RouterCreationFailed;
    };
    return router;
}

// Safe wrapper for callback registration
pub fn registerFrameCallback(
    backend: *UiBackend,
    comptime callback: fn(*const UiFrame, ?*anyopaque) void,
    user_data: ?*anyopaque
) void {
    const backend_struct = @ptrCast(*UiBackendStruct, backend);
    backend_struct.on_frame = callback;
    backend_struct.user_data = user_data;
}

// ============================================================================
// Compile-time Validation
// ============================================================================

comptime {
    // Ensure structures match C layout exactly
    std.debug.assert(@sizeOf(UiCell) == 16);
    std.debug.assert(@sizeOf(UiSpan) == 24);
    std.debug.assert(@alignOf(UiCell) == 4);
    std.debug.assert(@alignOf(UiSpan) == 8);
    
    // Ensure first field is always 'size' for ABI stability
    std.debug.assert(@offsetOf(UiFrame, "size") == 0);
    std.debug.assert(@offsetOf(UiCapabilities, "size") == 0);
    std.debug.assert(@offsetOf(FrameAggregator, "size") == 0);
    std.debug.assert(@offsetOf(BackendRouterStats, "size") == 0);
    std.debug.assert(@offsetOf(UiBackendOps, "size") == 0);
    std.debug.assert(@offsetOf(UiBackendStruct, "size") == 0);
    std.debug.assert(@offsetOf(BackendRouterStruct, "size") == 0);
}

// ============================================================================
// Testing Support
// ============================================================================

test "FFI type sizes match C" {
    try std.testing.expectEqual(@as(usize, 16), @sizeOf(UiCell));
    try std.testing.expectEqual(@as(usize, 24), @sizeOf(UiSpan));
    try std.testing.expectEqual(@as(usize, 2), @sizeOf(UiAttrFlags));
    try std.testing.expectEqual(@as(usize, 4), @sizeOf(UiFrameFlags));
    try std.testing.expectEqual(@as(usize, 4), @sizeOf(UiCapFlags));
}

test "Bitfield conversions" {
    const attrs = UiAttrFlags{ .bold = true, .italic = true };
    const u16_val = attrs.toU16();
    try std.testing.expectEqual(@as(u16, 0x0003), u16_val);
    
    const attrs2 = UiAttrFlags.fromU16(u16_val);
    try std.testing.expectEqual(true, attrs2.bold);
    try std.testing.expectEqual(true, attrs2.italic);
    try std.testing.expectEqual(false, attrs2.underline);
}

test "Zero-copy pointer casting" {
    var cell = UiCell{
        .codepoint = 'A',
        .fg_rgb = UI_COLOR_DEFAULT,
        .bg_rgb = UI_COLOR_DEFAULT,
        .attrs = 0,
        .width = 1,
        .cluster_cont = 0,
    };
    
    // These should compile without errors
    const c_ptr = cell.toC();
    const zig_ptr = UiCell.fromC(c_ptr);
    try std.testing.expectEqual(cell.codepoint, zig_ptr.codepoint);
}